Open library links in a new tab.

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -76,7 +76,7 @@
   <li id="expanded-image-holder-template" class='expanded-image-holder'>
     <img class='expanded-image thumb' height=400 />
     <div class='description'></div>
-    <a class='library-link'><i>via</i> San Francisco Public Library</a>
+    <a class='library-link' target='_blank'><i>via</i> San Francisco Public Library</a>
   </li>
 
   <script type="text/javascript">
