--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -7,14 +7,14 @@
   <link type="text/css" href="viewer.css" rel="stylesheet" />
 
   <!-- Google Maps API -->
-  <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClCA1LViYi4KLQfgMlfr3PS0tyxwqzYjA"></script>
   <script src="lat-lons.js"></script>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="jquery.ba-hashchange.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
   <script src="jquery/jquery.jcarousel.min.js"></script>
-  
+
   <script src="url-state.js"></script>
   <script src="photo-info.js"></script>
   <script src="viewer.js"></script>
